# xyzquery

./: .gitignore  README.md  pyproject.toml
src/xyzcompare/: main.py  parser.py
src/xyzmerge/: main.py  parser.py
src/xyzquery/: main.py  parser.py  test.xyz  utils.py
tests/: dipole.xyz  duplicate.xyz  t1.xyz  t1_t2.xyz  t2.xyz  test.xyz
